--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     </div>
 
-
+    <p style="font-size: xx-small; margin-left: 20px;">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
 
 </body>
 
