--- a/index.html
+++ b/index.html
@@ -2,22 +2,35 @@
 <html>
 
 <head>
-    <title>DIY Recipes</title>
+    <title>Rox's DIY Recipe Collection</title>
     <meta charset="utf-8" />
 
     <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     </link>
     <link rel="stylesheet" type="text/css" href="styles.css">
     </link>
+    <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;600&display=swap" rel="stylesheet">
     <script rel="stylesheet" type="text/javascript" src="script.js"></script>
 
 </head>
 
-<body>
+<body class="parallax">
     <header>
-        <p style="position: absolute;">Rox's DIY Cookbook Recipe Collection</p>
-        <!-- <p style="float:right">Inventory</p> -->
+        <!-- Floating Buttons-->
+        <div class="tools">
+            <p>Just Placeholders -->
+                <button class="btn"><img src="images/Icon_tools_inventory.png" style="width:32px"></button>
+                <button class="btn"><img src="images/Icon_tools_shoppingList.png" style="width:32px"></button></p>
+        </div>
+        <h1>Rox's DIY Recipe Collection</h1>
+
+
+
     </header><br>
+
+
+
+
 
     <div class="flex-pond" id="DIY-pond">
 
@@ -30,10 +43,11 @@
                     <!-- front content -->
 
                     <div class="card">
-                        <img src="images/808882.svg" style="width:250px">
+                        <img src="images/DIY_mugCake.png" style="width:250px">
 
                         <div class="card-container">
                             <h2>Chocolate Mug Cake</h2>
+                            <p>Takes 1 minute in the microwave to cook</p>
 
 
                         </div>
@@ -80,10 +94,11 @@
                     <!-- front content -->
 
                     <div class="card">
-                        <img src="images/2391713.svg.png" style="width:250px">
+                        <img src="images/DIY_mugCookie.png" style="width:250px">
 
                         <div class="card-container">
                             <h2>Chocolate Chip Mug Cookie</h2>
+                            <p>Tasty, tasty fresh cookie made in the microwave after 1:30 minutes</p>
                         </div>
                     </div>
 
@@ -127,10 +142,11 @@
                     <!-- front content -->
 
                     <div class="card">
-                        <img src="images/2360676.svg.png" style="width:250px">
+                        <img src="images/DIY_coffeeFoam.png" style="width:250px">
 
                         <div class="card-container">
                             <h2>Coffee Foam</h2>
+                            <p>Enhance any glass of milk with foamy goodness</p>
                         </div>
                     </div>
 
@@ -166,9 +182,6 @@
         </div>
 
     </div>
-
-    <p style="font-size: xx-small; margin-left: 20px;">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
-
 </body>
 
 </html>
