--- a/index.html
+++ b/index.html
@@ -2,25 +2,37 @@
 <html>
 
 <head>
-    <title>Rox's DIY Recipe Collection</title>
+    <title>Home | Rox's DIY Recipe Collection</title>
     <meta charset="utf-8" />
 
     <link rel="stylesheet" type="text/css" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
     </link>
     <link rel="stylesheet" type="text/css" href="styles.css">
     </link>
+    <link rel="stylesheet" type="text/css" href="imageList.css">
+    </link>
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;600&display=swap" rel="stylesheet">
-    <script rel="stylesheet" type="text/javascript" src="script.js"></script>
+
 
 </head>
 
 <body class="parallax">
+
     <header>
         <!-- Floating Buttons-->
         <div class="tools">
-            <p>Just Placeholders -->
-                <button class="btn"><img src="images/Icon_tools_inventory.png" style="width:32px"></button>
-                <button class="btn"><img src="images/Icon_tools_shoppingList.png" style="width:32px"></button></p>
+            <a href="inventory.html">
+                <button id="InvBtn" class="btn" data-tippy-content="Inventory">
+                    <img id="inventory" src="images/emptyPic.png" class="IconTools" width="1px">
+                    
+                </button>
+            </a>
+            <a href="shoppingList.html">
+                <button id="SLBtn" class="btn" data-tippy-content="Shopping List">
+                    <img id="shoppingList" src="images/emptyPic.png" class="IconTools" width="1px">
+                    
+                    </button>
+            </a>
         </div>
         <h1>Rox's DIY Recipe Collection</h1>
 
@@ -30,158 +42,272 @@
 
 
 
+    <main>
+
+        <div class="flex-pond" id="DIY-pond">
 
 
-    <div class="flex-pond" id="DIY-pond">
+            <!-- DIY MUG CAKE START-->
+
+            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                <div class="flipper">
+                    <div class="front">
+                        <!-- front content -->
+
+                        <div class="card">
+                            <img id="mugCake" src="images/emptyPic.png" class="IconFood" width="250px">
+
+                            <div class="card-container">
+                                <h2>Chocolate Mug Cake</h2>
+                                <p>Takes 1 minute in the microwave to cook</p>
 
 
-        <!-- DIY MUG CAKE START-->
+                            </div>
+                        </div>
+                    </div>
+                    <div class="back">
+                        <!-- back content -->
 
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');" id="DIY-MugCake">
-            <div class="flipper">
-                <div class="front">
-                    <!-- front content -->
-
-                    <div class="card">
-                        <img src="images/DIY_mugCake.png" style="width:250px">
-
-                        <div class="card-container">
-                            <h2>Chocolate Mug Cake</h2>
-                            <p>Takes 1 minute in the microwave to cook</p>
+                        <div class="card">
 
 
+                            <div class="card-container">
+                                <h2>Chocolate Mug Cake</h2>
+                                <a href="https://youtu.be/zHBqUgPEa_0" class="btn" target="_blank">View Video</a>
+
+                                <br>
+                                <h3>INGREDIENTS</h3>
+                                <ul>
+                                    <li>2 tbsp flour</li>
+                                    <li>1 tbsp sugar</li>
+                                    <li>1 tbsp cocoa powder </li>
+                                    <li>1/4 tsp baking powder </li>
+                                    <li>1 tbsp vegetable oil (or any flavorless oil)</li>
+                                    <li>3 tbsp milk</li>
+                                    <li>1 tbsp Nutella (or chocolate chips)</li>
+                                </ul>
+
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="back">
-                    <!-- back content -->
-
-                    <div class="card">
+            </div>
 
 
-                        <div class="card-container">
-                            <h2>Chocolate Mug Cake</h2>
-                            <a href="https://youtu.be/zHBqUgPEa_0" class="btn">View Video</a>
+            <!-- DIY MUG COOKIE START-->
 
-                            <br>
-                            <h3>INGREDIENTS</h3>
-                            <ul>
-                                <li>2 tbsp all-purpose flour</li>
-                                <li>1 tbsp sugar</li>
-                                <li>1 tbsp unsweetened cocoa powder </li>
-                                <li>1/4 tsp baking powder </li>
-                                <li>1 tbsp vegetable oil (or any flavorless oil)</li>
-                                <li>3 tbsp milk</li>
-                                <li>1 tbsp Nutella (or chocolate chips)</li>
-                            </ul>
+            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                <div class="flipper">
+                    <div class="front">
+                        <!-- front content -->
 
+                        <div class="card">
+                            <img id="mugCookie" src="images/emptyPic.png" class="IconFood">
+
+                            <div class="card-container">
+                                <h2>Chocolate Chip Mug Cookie</h2>
+                                <p>Tasty, tasty fresh cookie made in the microwave after 1:30 minutes</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <div class="back">
+                        <!-- back content -->
+
+                        <div class="card">
+
+
+                            <div class="card-container">
+                                <h2>Chocolate Chip Mug Cookie</h2>
+                                <a href="https://youtu.be/y-dpHtlHXcc" class="btn" target="_blank">View Video</a>
+
+                                <br>
+                                <h3>INGREDIENTS</h3>
+                                <ul>
+                                    <li>4 tbsp flour</li>
+                                    <li>1/2 tsp baking powder</li>
+                                    <li>1 tbsp sugar </li>
+                                    <li>2-3 tbsp peanut butter</li>
+                                    <li>1/4 cup milk </li>
+                                    <li>2 tbsp chocolate chips</li>
+                                </ul>
+
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- DIY COFFEE FOAM START-->
+
+            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                <div class="flipper">
+                    <div class="front">
+                        <!-- front content -->
+
+                        <div class="card">
+                            <img id="coffeeFoam" src="images/emptyPic.png" class="IconFood">
+
+                            <div class="card-container">
+                                <h2>Coffee Foam</h2>
+                                <p>Enhance any glass of milk with foamy goodness</p>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                    <div class="back">
+                        <!-- back content -->
+
+
+                        <div class="card">
+
+
+                            <div class="card-container">
+                                <h2>Coffee Foam</h2>
+                                <a href="https://youtu.be/fYX1BcgWMqw" class="btn" target="_blank">View Video</a>
+
+                                <br>
+                                <h3>INGREDIENTS</h3>
+                                <ul>
+                                    <li>1 tsp instant coffee</li>
+                                    <li>2 tsp creamer</li>
+                                    <li>1 tbsp sugar</li>
+                                    <li>1 tbsp hot water </li>
+
+                                </ul>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <!-- DIY PIZZA MUG-->
+
+            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                <div class="flipper">
+                    <div class="front">
+                        <!-- front content -->
+
+                        <div class="card">
+                            <img id="mugPizza" src="images/emptyPic.png" class="IconFood">
+
+                            <div class="card-container">
+                                <h2>Pizza Mug</h2>
+                                <p>Freshly made goodness in 1:30 minutes in the microwave</p>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                    <div class="back">
+                        <!-- back content -->
+
+
+                        <div class="card">
+
+
+                            <div class="card-container">
+                                <h2>Pizza Mug</h2>
+                                <a href="https://youtu.be/x4oenkaDKDU" class="btn" target="_blank">View Video</a>
+
+                                <br>
+                                <h3>INGREDIENTS</h3>
+                                <ul>
+                                    <li>4 tbsp flour</li>
+                                    <li>1/4 tsp baking powder </li>
+                                    <li>1/8 tsp salt</li>
+                                    <li>1 tbsp olive oil</li>
+                                    <li>3 tbsp milk</li>
+                                    <li>1 tbsp tomato sauce (like Marinara)</li>
+                                    <li>shreaded cheese</li>
+                                    <li>toppings</li>
+                                    <li>oregano</li>
+                                </ul>
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- DIY LOADED POTATO START-->
+
+            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+                <div class="flipper">
+                    <div class="front">
+                        <!-- front content -->
+
+                        <div class="card">
+                            <img id="loadedPotato" src="images/emptyPic.png" class="IconFood">
+
+                            <div class="card-container">
+                                <h2>Loaded Potato</h2>
+                                <p>Surprisingly easy as long as you have a baking potato</p>
+                            </div>
+                        </div>
+
+
+
+                    </div>
+                    <div class="back">
+                        <!-- back content -->
+
+
+                        <div class="card">
+
+
+                            <div class="card-container">
+                                <h2>Loaded Potato</h2>
+                                <a href="https://youtu.be/2RgjNIhGKwU" class="btn" target="_blank">View Video</a>
+
+                                <br>
+                                <h3>INGREDIENTS</h3>
+                                <ul>
+                                    <li>1 baking potato</li>
+                                    <li>salt</li>
+                                    <li>olive oil</li>
+                                    <li>butter</li>
+                                    <li>shreaded cheese</li>
+                                    <li>black beans</li>
+                                    <li>corn</li>
+                                    <li>coleslaw (if you have it)</li>
+                                </ul>
+
+
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </main>
+
+    <footer>
+
+        <!-- Development -->
+        <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+        <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+
+        <!-- Production -->
+        <script src="https://unpkg.com/@popperjs/core@2"></script>
+        <script src="https://unpkg.com/tippy.js@6"></script>
+
+        <script rel="stylesheet" type="text/javascript" src="script.js"></script>
+
+    </footer>
 
 
-
-
-
-
-        <!-- DIY MUG COOKIE START-->
-
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');" id="DIY-MugCookie">
-            <div class="flipper">
-                <div class="front">
-                    <!-- front content -->
-
-                    <div class="card">
-                        <img src="images/DIY_mugCookie.png" style="width:250px">
-
-                        <div class="card-container">
-                            <h2>Chocolate Chip Mug Cookie</h2>
-                            <p>Tasty, tasty fresh cookie made in the microwave after 1:30 minutes</p>
-                        </div>
-                    </div>
-
-
-                </div>
-                <div class="back">
-                    <!-- back content -->
-
-                    <div class="card">
-
-
-                        <div class="card-container">
-                            <h2>Chocolate Chip Mug Cookie</h2>
-                            <a href="https://youtu.be/y-dpHtlHXcc" class="btn">View Video</a>
-
-                            <br>
-                            <h3>INGREDIENTS</h3>
-                            <ul>
-                                <li>4 Tbsp Plain All Purpose Flour</li>
-                                <li>1/2 Tsp Baking Powder</li>
-                                <li>1 Tbsp Sugar </li>
-                                <li>2-3 Tbsp Peanut Butter (or any Nut Butter)</li>
-                                <li>1/4 Cup Milk </li>
-                                <li>2 Tbsp Chocolate Chips</li>
-                            </ul>
-
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-        </div>
-
-
-        <!-- DIY COFFEE FOAM START-->
-
-        <div class="flip-container" ontouchstart="this.classList.toggle('hover');" id="DIY-CoffeeFoam">
-            <div class="flipper">
-                <div class="front">
-                    <!-- front content -->
-
-                    <div class="card">
-                        <img src="images/DIY_coffeeFoam.png" style="width:250px">
-
-                        <div class="card-container">
-                            <h2>Coffee Foam</h2>
-                            <p>Enhance any glass of milk with foamy goodness</p>
-                        </div>
-                    </div>
-
-
-
-                </div>
-                <div class="back">
-                    <!-- back content -->
-
-
-                    <div class="card">
-
-
-                        <div class="card-container">
-                            <h2>Coffee Foam</h2>
-                            <a href="https://youtu.be/fYX1BcgWMqw" class="btn">View Video</a>
-
-                            <br>
-                            <h3>INGREDIENTS</h3>
-                            <ul>
-                                <li>1 tsp instant coffee</li>
-                                <li>2 tsp creamer</li>
-                                <li>1 tbsp sugar</li>
-                                <li>1 tbsp hot water </li>
-
-                            </ul>
-
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
 </body>
 
 </html>
